Security: Implement RBAC for admin endpoints
- Add Role enum (USER, ADMIN) to user model
- Update database schema to include role column
- Secure admin endpoints to require ADMIN role
- Include role in JWT tokens
- Set default USER role for new registrations